[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaprese"
authors = [
    { name="Seokhyun Lee", email="gbvrcx@gmail.com" }
]
description = "Project parser for Python"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "docker>=6",
    "rich>=13"
]

[project.optional-dependencies]
dev = [
    "black>=23",
    "isort>=5"
]
test = [
    "pytest>=7",
]

[project.urls]
"Homepage" = "https://github.com/kupl/kaprese"
"Bug Tracker" = "https://github.com/kupl/kaprese/issues"

[tool.hatch.version]
path = "kaprese/__init__.py"

[project.scripts]
kaprese = "kaprese.bin.kaprese:main"
